[gd_scene load_steps=4 format=3 uid="uid://1jimaojru38c"]

[ext_resource type="Texture2D" uid="uid://bav6wjgavjau8" path="res://Assets/Sprites/Puzzle3/atlantis_puzzle_board.png" id="1_mc66j"]
[ext_resource type="Script" path="res://Scripts/pipe_board.gd" id="2_j5heo"]
[ext_resource type="PackedScene" uid="uid://8gxd0d505djl" path="res://Scenes/Levels/pipe.tscn" id="2_rtyx0"]

[node name="PuzzleAtlantis" type="Node2D"]

[node name="AtlantisPuzzleBoard" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(640, 360)
scale = Vector2(5, 5)
texture = ExtResource("1_mc66j")

[node name="Table" type="Sprite2D" parent="AtlantisPuzzleBoard"]
position = Vector2(1, 0)
texture = ExtResource("1_mc66j")
region_enabled = true
region_rect = Rect2(34, 1, 128, 128)

[node name="PipeBoard" type="GridContainer" parent="AtlantisPuzzleBoard/Table"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4
script = ExtResource("2_j5heo")

[node name="Pipe" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 2
correct_rotation = 180.0

[node name="Pipe2" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2

[node name="Pipe3" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 2
correct_rotation = 90.0

[node name="Pipe4" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 2
correct_rotation = 180.0

[node name="Pipe5" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 3
correct_rotation = 90.0

[node name="Pipe6" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 2
correct_rotation = 180.0

[node name="Pipe7" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 1

[node name="Pipe8" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 1

[node name="Pipe9" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 1

[node name="Pipe10" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 3
correct_rotation = 90.0

[node name="Pipe11" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 2
correct_rotation = 270.0

[node name="Pipe12" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 1

[node name="Pipe13" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 2

[node name="Pipe14" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 3

[node name="Pipe15" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 1
correct_rotation = 90.0

[node name="Pipe16" parent="AtlantisPuzzleBoard/Table/PipeBoard" instance=ExtResource("2_rtyx0")]
layout_mode = 2
form_type = 3
